--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>首页</title>
 	<link rel="stylesheet" href="css/index.css">
-	<link rel="stylesheet" href="js/index.js">
+	<script src="js/index.js"></script>
 </head>
 <body>
 	<div class="audio">
@@ -18,17 +18,18 @@
 				</div>
 				<div class="right">
 					<div class="con">
-						<a href="">
+						<a href="list3.html">
 							<span>社会责任</span>
 						</a>
-						<a href="">
+						<a href="list2.html">
 							<span>品牌</span>
 						</a>
-						<a href="">
+						<a href="list1.html">
 							<span>产品</span>
 						</a>
-						<a href="">
+						<a href="index.html">
 							<span>首页</span>
+							<em>HOME</em>
 						</a>
 					
 					 </div>
