--- a/inventory.html
+++ b/inventory.html
@@ -14,16 +14,16 @@
 				</div>
 				<div class="right">
 					<div class="con">
-						<a href="">
+						<a href="list3.html">
 							<span>社会责任</span>
 						</a>
-						<a href="">
+						<a href="list2.html">
 							<span>品牌</span>
 						</a>
-						<a href="">
+						<a href="list1.html">
 							<span>产品</span>
 						</a>
-						<a href="">
+						<a href="index.html">
 							<span>首页</span>
 						</a>
 					
