--- a/list1.html
+++ b/list1.html
@@ -17,16 +17,16 @@
 				</div>
 				<div class="right">
 					<div class="con">
-						<a href="">
+						<a href="list3.html">
 							<span>社会责任</span>
 						</a>
-						<a href="">
+						<a href="list2.html">
 							<span>品牌</span>
 						</a>
-						<a href="">
+						<a href="list1.html">
 							<span>产品</span>
 						</a>
-						<a href="">
+						<a href="index.html">
 							<span>首页</span>
 						</a>
 					
@@ -90,9 +90,9 @@
 					<span>更多经典款式</span>
 				</div>
 				<div class="box">
-					<div class="smallbox">
+					<a href="inventory.html">
 						<span>全部产品</span>
-					</div>
+					</a>
 				</div>
 			</div>
 			<div class="son2">
