--- a/list2.html
+++ b/list2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="audio">
-		<video autoplay muted loop style="width:100%;">
+		<video autoplay muted loop style="width: 100%;">
 			<source src="img/3.mp4"></source>
 		</video>
 		<div class="header">
@@ -17,23 +17,25 @@
 				</div>
 				<div class="right">
 					<div class="con">
-						<a href="">
+						<a href="list3.html">
 							<span>社会责任</span>
 						</a>
-						<a href="">
+						<a href="list2.html">
 							<span>品牌</span>
 						</a>
-						<a href="">
+						<a href="list1.html">
 							<span>产品</span>
 						</a>
-						<a href="">
+						<a href="index.html">
 							<span>首页</span>
+							<!-- <em>HOME</em> -->
 						</a>
 					
 					 </div>
 				</div>
 			</div>	
 		</div>
+		<!-- <div class="box"></div> -->
 		<div class="middle">
 			<div class="kawa">
 				<img src="img/top1.png" width="569px" height="59px" alt="加载失败">
