--- a/list3.html
+++ b/list3.html
@@ -14,16 +14,16 @@
 				</div>
 				<div class="right">
 					<div class="con">
-						<a href="">
+						<a href="list3.html">
 							<span>社会责任</span>
 						</a>
-						<a href="">
+						<a href="list2.html">
 							<span>品牌</span>
 						</a>
-						<a href="">
+						<a href="list1.html">
 							<span>产品</span>
 						</a>
-						<a href="">
+						<a href="index.html">
 							<span>首页</span>
 						</a>
 					
@@ -213,7 +213,7 @@
 				<img src="img/ai9.JPG" width="315.56px" height="177.13px" alt="177.13px">
 			</div>
 			<div class="son2">
-				<span>轮椅天使朱沙老师挽救众多轻生者</span>
+				<span>带金婚老人穿越时空，重温爱情</span>
 			</div>
 		</div>
 		<div class="con">
@@ -221,7 +221,7 @@
 				<img src="img/ai10.JPG" width="315.56px" height="177.13px" alt="177.13px">
 			</div>
 			<div class="son2">
-				<span>帮助不离不弃患难爱侣"病房中最美新娘"</span>
+				<span>帮助鲁甸灾区失亲孩子重建梦想</span>
 			</div>
 		</div>
 		<div class="con">
@@ -229,7 +229,7 @@
 				<img src="img/ai11.jpg" width="315.56px" height="177.13px" alt="177.13px">
 			</div>
 			<div class="son2">
-				<span>“渐冻症教师”时刻传递正能量给社会青年</span>
+				<span>嘉华义工队支援“千人相亲会”活动</span>
 			</div>
 		</div>
 		<div class="con">
@@ -237,7 +237,118 @@
 				<img src="img/ai12.png" width="315.56px" height="177.13px" alt="177.13px">
 			</div>
 			<div class="son2">
-				<span>为爱圆梦，嘉华助力血癌女孩</span>
+				<span>婚爱大讲堂之“倾听爱的声音”</span>
+			</div>
+		</div>
+	</div>
+	<div class="an3">
+		<div class="con">
+			<div class="son1">
+				<img src="img/ai13.jpg" width="315.56px" height="177.13px" alt="177.13px">
+			</div>
+			<div class="son2">
+				<span>婚爱大讲堂-河南郑州站</span>
+			</div>
+		</div>
+		<div class="con">
+			<div class="son1">
+				<img src="img/ai14.JPG" width="315.56px" height="177.13px" alt="177.13px">
+			</div>
+			<div class="son2">
+				<span>合肥站婚爱大讲堂</span>
+			</div>
+		</div>
+		<div class="con">
+			<div class="son1">
+				<img src="img/ai15.jpg" width="315.56px" height="177.13px" alt="177.13px">
+			</div>
+			<div class="son2">
+				<span>走进嘉华萃会所</span>
+			</div>
+		</div>
+		<div class="con">
+			<div class="son1">
+				<img src="img/ai16.png" width="315.56px" height="177.13px" alt="177.13px">
+			</div>
+			<div class="son2">
+				<span>信利康企业幸福微讲堂</span>
+			</div>
+		</div>
+	</div>
+	<div class="an4">
+		<div class="con">
+			<div class="son1">
+				<img src="img/ai17.png" width="315.56px" height="177.13px" alt="177.13px">
+			</div>
+			<div class="son2">
+				<span>成都基站-见证真情，为爱护航活动</span>
+			</div>
+		</div>
+		<div class="con">
+			<div class="son1">
+				<img src="img/ai18.png" width="315.56px" height="177.13px" alt="177.13px">
+			</div>
+			<div class="son2">
+				<span>石阡基站-见证真情，为爱护航活动</span>
+			</div>
+		</div>
+	</div>
+	<div class="footer">
+		<div class="con">
+			<div class="top">
+				<div class="top-son">
+					<div class="son1">
+						<div class="lianxi">
+							<span>联系方式</span>
+						</div>
+						<div class="xinxi">
+							<div class="xi">
+								<span>热线 : 400 - 777 - 0280（周一至周五9:00-18:00）</span>
+							</div>
+							<div class="xi">
+								<span>电话 : 0755-2577-0066</span>
+							</div>
+							<div class="xi">
+								<span>传真 : 0755-2563-3170</span>
+							</div>
+							<div class="xi">
+								<span>邮编 : 518020</span>
+							</div>
+							<div class="xi">
+								<span>地址 : 深圳市罗湖区田贝三路76号</span>
+							</div>
+						</div>
+					</div>
+					<div class="son2">
+						<div class="dao">
+							<span>快捷导航</span>
+						</div>
+						<div class="wo">
+							<div class="men">
+								<span>了解我们</span>
+	         				</div>
+							<div class="men">
+								<span>加入我们</span>
+							</div>
+							<div class="men">
+								<span>了解珠宝</span>
+							</div>
+						</div>
+					</div>
+					<div class="son3">
+						<div class="ma">
+							<img src="img/1.png" width="152px" height="152px" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="bottom">
+				<div class="weizhi">
+					<span>COPYRIGHT © 2016 深圳市大盘珠宝首饰有限责任公司. ALL RIGHTS RESERVED. 粤ICP备12088323号</span>
+				</div>
+				<div class="zhi">
+					<span>技术支持：竹子建站</span>
+				</div>
 			</div>
 		</div>
 	</div>
