--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 						</a>
 						<a href="index.html">
 							<span>首页</span>
-							<em>HOME</em>
+							<!-- <em>HOME</em> -->
 						</a>
-					
+						<a href="aizhubaozhanshi.html">
+							<span>全屏展示</span>
+						</a>
 					 </div>
 				</div>
 			</div>	
