--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>首页</title>
 	<link rel="stylesheet" href="css/index.css">
+	<script src="js/animate.js"></script>
 	<script src="js/index.js"></script>
 </head>
 <body>
@@ -22,10 +23,25 @@
 							<span>社会责任</span>
 						</a>
 						<a href="list2.html">
-							<span>品牌</span>
+							<span id="span">品牌</span>
+							<div class="pinpai">
+								<span>品牌介绍</span>
+								<span>品牌文化</span>
+								<span>新闻动态</span>
+								<span>商学院</span>
+							</div>
 						</a>
 						<a href="list1.html">
-							<span>产品</span>
+							<span id="span">产品</span>
+							<div class="chanpin">
+								<span>中国新娘</span>
+								<span>龙凤传奇</span>
+								<span>喜爱百年</span>
+								<span>幸福如意</span>
+								<span>爱情电梯</span>
+								<span>红来运转</span>
+								<span>其他产品</span>
+							</div>
 						</a>
 						<a href="index.html">
 							<span>首页</span>
