--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 					<div class="con">
 						<a href="list3.html">
 							<span>社会责任</span>
+							<!-- <em>LIABILTY</em> -->
 						</a>
 						<a href="list2.html">
-							<span id="span">品牌</span>
+							<span>品牌</span>
+							<!-- <em>BRAND</em> -->
 							<div class="pinpai">
 								<span>品牌介绍</span>
 								<span>品牌文化</span>
@@ -32,7 +34,8 @@
 							</div>
 						</a>
 						<a href="list1.html">
-							<span id="span">产品</span>
+							<span>产品</span>
+							<!-- <em>PRODECT</em> -->
 							<div class="chanpin">
 								<span>中国新娘</span>
 								<span>龙凤传奇</span>
@@ -44,8 +47,8 @@
 							</div>
 						</a>
 						<a href="index.html">
-							<span>首页</span>
-							<!-- <em>HOME</em> -->
+							<span id="span">首页</span>
+							<em>HOME</em>
 						</a>
 						<a href="aizhubaozhanshi.html">
 							<span>全屏展示</span>
