--- a/inventory.html
+++ b/inventory.html
@@ -28,7 +28,7 @@
 							</div>
 						</a>
 						<a href="list1.html">
-							<span id="span">产品</span>
+							<span id="span" class="span">产品</span>
 							<div class="chanpin">
 								<span>中国新娘</span>
 								<span>龙凤传奇</span>
