--- a/list2.html
+++ b/list2.html
@@ -22,7 +22,7 @@
 							<span>社会责任</span>
 						</a>
 						<a href="list2.html">
-							<span id="span">品牌</span>
+							<span id="span" class="span">品牌</span>
 							<div class="pinpai">
 								<span>品牌介绍</span>
 								<span>品牌文化</span>
