--- a/aizhubaozhanshi.html
+++ b/aizhubaozhanshi.html
@@ -8,8 +8,8 @@
 	<meta name="description" content="fullPage full-screen backgrounds." />
 	<meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,backgrounds,full-screen" />
 	<meta name="Resource-type" content="Document" />
-
-
+	<script src="js/index.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/aizhubaozhanshi.css">
 	<link rel="stylesheet" type="text/css" href="css/fullpage.css" />
 	<link rel="stylesheet" type="text/css" href="css/examples.css" />
 	<style>
@@ -89,6 +89,7 @@
 	<![endif]-->
 </head>
 <body>
+	
 
 <a href="https://github.com/alvarotrigo/fullPage.js" id="githubLink"><img style="position: fixed;z-index:99; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
@@ -136,18 +137,80 @@
   <option id="trigger-animations">Trigger animations</option>
   <option id="vue-fullpage">Vue-fullpage component</option>
 </select>
-
-<div id="fullpage">
-	<div class="section " id="section0" ><h1 style="color: pink">真正的爱情是什么？</h1></div>
-	<div class="section" id="section1">
-		<div class="slide" id="slide1"><h1 style="color:pink">爱是包容而不是放纵 ;<br>爱是关怀而不是宠爱 ;<br>爱是相互交融而不是单相思<br> ;爱是百味而不全是甜蜜</h1></div>
-		<div class="slide" id="slide2"><h1 style="color: pink">真正的爱情并不一定是他人眼中的完美匹配;
-而是相爱的人彼此心灵的相互契合!</h1></div>
+	<div class="longphoto">
+		<div class="header">
+			<div class="nav">
+				<div class="left">
+					<img src="img/top2.png" width="194.28px" height="48px" alt="加载失败">
+				</div>
+				<div class="right">
+					<div class="con">
+						<a href="list3.html">
+							<span class="span">社会责任</span>
+							<em>LIABILTY</em>
+						</a>
+						<a href="list2.html">
+							<span class="span">品牌</span>
+							<em>BRAND</em>
+							<div class="pinpai">
+								<p>品牌介绍</p>
+								<p>品牌文化</p>
+								<p>新闻动态</p>
+								<p>商学院</p>
+							</div>
+						</a>
+						<a href="list1.html">
+							<span class="span">产品</span>
+							<em>PRODECT</em>
+							<div class="chanpin">
+								<p>中国新娘</p>
+								<p>龙凤传奇</p>
+								<p>喜爱百年</p>
+								<p>幸福如意</p>
+								<p>爱情电梯</p>
+								<p>红来运转</p>
+								<p>其他产品</p>
+							</div>
+						</a>
+						<a href="index.html">
+							<span id="span" class="span">首页</span>
+							<em>HOME</em>
+						</a>
+						<a href="aizhubaozhanshi.html">
+							<span class="span">全屏展示</span>
+							<em>展示全屏</em>
+						</a>
+					 </div>
+				</div>
+			</div>	
+		</div>
+		<div class="zuimei">
+			<span>the most beautiful bride</span>
+			<span>最美的新娘</span>
+		</div>
+		<!-- <div class="box"></div> -->
+		<div class="middle">
+			<div class="kawa">
+				<img src="img/c1.png" width="236px" height="58px" alt="加载失败">
+			</div>
+		</div>
+		<div class="shou">
+			<div class="con">
+				<img src="img/c2.png" width="590px" height="24px" alt="加载失败">
+			</div>
+		</div>
 	</div>
-	<div class="section" id="section2"><h1 style="color: pink">真正的爱情，是在能爱的时候，懂得珍惜! <br />真正的爱情，是在无法爱的时候，懂得放手!</h1></div>
-	<div class="section" id="section3"><h1 style="color: pink font-size:20px">请在珍惜的时候,好好去爱!</h1></div>
-</div>
+<div id="fullpage">
 
+	<div class="section " id="section0" ><h1 style="color: #ccc">Devoted</h1></div>
+	<div class="section" id="section1">
+		<div class="slide" id="slide1"><h1 style="color:#ccc">Freedom</h1></div>
+		<div class="slide" id="slide2"><h1 style="color: #ccc">Independence</h1></div>
+	</div>
+	<div class="section" id="section2"><h1 style="color: #ccc">Honesty</h1></div>
+	
+	<div class="section" id="section2"><h1 style="color: pink font-size:20px">全心全意，自由，独立，真诚，成熟，<br>the most beautiful bride </h1></div>
+</div>
 
 <script type="text/javascript" src="js/fullpage.js"></script>
 <script type="text/javascript" src="js/examples.js"></script>
