--- a/list3.html
+++ b/list3.html
@@ -16,35 +16,39 @@
 				<div class="right">
 					<div class="con">
 						<a href="list3.html">
-							<span>社会责任</span>
+							<span class="span">社会责任</span>
+							<em>LIABILTY</em>
 						</a>
 						<a href="list2.html">
-							<span id="span">品牌</span>
+							<span class="span">品牌</span>
+							<em>BRAND</em>
 							<div class="pinpai">
-								<span>品牌介绍</span>
-								<span>品牌文化</span>
-								<span>新闻动态</span>
-								<span>商学院</span>
+								<p>品牌介绍</p>
+								<p>品牌文化</p>
+								<p>新闻动态</p>
+								<p>商学院</p>
 							</div>
 						</a>
 						<a href="list1.html">
-							<span id="span">产品</span>
+							<span class="span">产品</span>
+							<em>PRODECT</em>
 							<div class="chanpin">
-								<span>中国新娘</span>
-								<span>龙凤传奇</span>
-								<span>喜爱百年</span>
-								<span>幸福如意</span>
-								<span>爱情电梯</span>
-								<span>红来运转</span>
-								<span>其他产品</span>
+								<p>中国新娘</p>
+								<p>龙凤传奇</p>
+								<p>喜爱百年</p>
+								<p>幸福如意</p>
+								<p>爱情电梯</p>
+								<p>红来运转</p>
+								<p>其他产品</p>
 							</div>
 						</a>
 						<a href="index.html">
-							<span>首页</span>
-							<!-- <em>HOME</em> -->
+							<span id="span" class="span">首页</span>
+							<em>HOME</em>
 						</a>
 						<a href="aizhubaozhanshi.html">
-							<span>全屏展示</span>
+							<span class="span">全屏展示</span>
+							<em>展示全屏</em>
 						</a>
 					 </div>
 				</div>
